--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>2024 Predictions</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body background="C:\Users\Dell\Downloads\bg.jpg">
+<body background="bg.jpg">
     <div class="container">
         <h1>2024 Predictions</h1>
         <br>
