--- a/haha.html
+++ b/haha.html
@@ -6,7 +6,7 @@
     <title>Love Life!!!?&#128514;My Foot</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body background="C:\Users\Dell\Downloads\gg.jpg">
+<body background="gg.jpg">
     <center>
         <H1>YOUUU AREE GAYYY BITCHH!!!&#128514;OMYYYGWAD U R LGtv3$$#%$%$!??</H1>
         <br>
