--- a/userinfo.html
+++ b/userinfo.html
@@ -6,7 +6,7 @@
     <title>User Info</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body background="C:\Users\Dell\Downloads\bg.jpg">
+<body background="bg.jpg">
     <div class="container">
         <h1>Hello Queen of zodiac CANCER !!!!</h1>
         <p>Welcome to 2024, Cancer. Pluto, the badass planet of death and rebirth, embarks on a journey all year that is major for love and relationships. Let's talk about love first, shall we? The makeover planet is in Aquarius and your 8th House of Sex, Death, and Transformation starting on Saturday, January 20, encouraging you to expand what's on the sensuality menu, whether you're taking a break from dating, enjoying the fluidity of your orientation, or experimenting with kink and fantasy. Pluto dips into Capricorn and your 7th House of Partnership on Sunday, September 1, where it will stay until Tuesday, November 19, bringing big but welcome changes to your most important relationships. It moves back into Aquarius and your 8th House of Sex at that date, giving you time to celebrate your love with sensuality through the end of the year.</p>
